--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "expressjs",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "node-expressjs",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./bin/www"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "mongoose": "^7.0.3",
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.22"
+  }
 }
